welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: identifier expected but 'false' found.
	if ( estFaceMur(): Boolean == false ) { 
                                      ^SlugTracking:14: error: ')' expected but '}' found.
}       
^