welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var c:Boolean = false
	if ( estFaceMur(): Boolean == false ) { 
		avance() 
		if (getCouleurSol() == Color.green) {
			c = true
		}
		else { c = false }
		recule()
		if ( c == true ) { return true }
		else { return false }
	}
}       
